<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_center">Center</string>
    <string name="action_delete">Delete</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_export">Export</string>
    <string name="action_export_gpx">Export to GPX</string>
    <string name="action_export_kml">Export to KML</string>
    <string name="action_help">Help</string>
    <string name="action_import">Import</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_rename">Rename</string>
    <string name="action_reset">Reset markers</string>
    <string name="action_save">Save</string>
    <string name="action_see">See</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop">Stop</string>
    <string name="activity_about_title">About</string>
    <string name="activity_changelog_title">Changelog</string>
    <string name="activity_import_description">You can edit theses XPath queries to modify the way the file will be parsed.</string>
    <string name="activity_import_title">Import</string>
    <string name="activity_import_title_format">Import %1$s</string>
    <string name="activity_import_xpath_description_label">"'description' node"</string>
    <string name="activity_import_xpath_legs_label">"'legs' node"</string>
    <string name="activity_import_xpath_name_label">"'name' node"</string>
    <string name="activity_import_xpath_points_label">"'points' node"</string>
    <string name="activity_import_xpath_waypoints_label">"'waypoints' node"</string>
    <string name="activity_itineraries_emptyList_message">There are no itineraries yet</string>
    <string name="activity_itinerary_accuracyDeltaPrefix">±</string>
    <string name="activity_itinerary_summary">{fa-road} %1$s, {fa-clock-o} %2$s</string>
    <string name="activity_itinerary_summary_unavailable">Details not available yet</string>
    <string name="activity_licenses_title">Licenses</string>
    <string name="activity_main_label">Lockito</string>
    <string name="prefs_about_changelogs_summary">See the full change log</string>
    <string name="prefs_about_changelogs_title">Changelog</string>
    <string name="prefs_about_developer_summary">Damien Villeneuve</string>
    <string name="prefs_about_developer_title">Developed by</string>
    <string name="prefs_about_followOnTwitter_summary">Click here to follow @LockitoApp</string>
    <string name="prefs_about_followOnTwitter_title">Follow on Twitter</string>
    <string name="prefs_about_licenses_summary">See used projects licenses</string>
    <string name="prefs_about_licenses_title">Licenses</string>
    <string name="prefs_about_likeTheApp">You like this app ?</string>
    <string name="prefs_about_rateApplication_summary">Click here to rate application on Play market</string>
    <string name="prefs_about_rateApplication_title">Rate application</string>
    <string name="prefs_about_sendFeedback_summary">Click here to send an email to the developper</string>
    <string name="prefs_about_sendFeedback_title">Send a feedback</string>
    <string name="prefs_about_version_summary">Version %s</string>
    <string name="prefs_about_version_title">Lockito</string>
    <string name="prefs_general">General</string>
    <string name="prefs_general_locationsDelay_dialogMessage">Delay between locations</string>
    <string name="prefs_general_locationsDelay_summary">Mock a new locations every %1$d seconds</string>
    <string name="prefs_general_locationsDelay_title">Delay between locations</string>
    <string name="prefs_general_unitSystem_title">System of measurement</string>
    <string name="prefs_itineraries">Itineraries</string>
    <string name="prefs_itineraries_order_title">Order itineraries</string>
    <string name="prefs_itineraries_showThumbnails_summary">Show preview in itineraries list</string>
    <string name="prefs_itineraries_showThumbnails_title">Show thumbnails</string>
    <string name="prefs_itinerary">Itinerary</string>
    <string name="prefs_itinerary_forceSimulationRunning_summary">Force simulation to run even if screen was turned off (Battery-consuming option)</string>
    <string name="prefs_itinerary_forceSimulationRunning_title">Force simulation to run</string>
    <string name="prefs_itinerary_notifyUnsaved_summary">Notify if leaving an itinerary without saving</string>
    <string name="prefs_itinerary_notifyUnsaved_title">Notify if unsaved</string>
    <string name="prefs_itinerary_stopWhenFinish_summary">Stop simulation at the end of itinerary</string>
    <string name="prefs_itinerary_stopWhenFinish_title">Stop when finished</string>
    <string name="prefs_itinerary_vibrateOnMarkerUpdate_summary">Vibrate every time a marker is added or start dragging</string>
    <string name="prefs_itinerary_vibrateOnMarkerUpdate_title">Vibrate on markers update</string>
    <string name="activity_itinerary_accuracy">Accuracy</string>
    <string name="activity_itinerary_altitude">Altitude</string>
    <string name="activity_itinerary_speed">Speed</string>
    <string name="prefs_about_developer_data">http://dvilleneuve.fr</string>
    <string name="prefs_about_followOnTwitter_data">https://twitter.com/LockitoApp</string>
    <string name="prefs_about_rateApplication_data">market://details?id=fr.dvilleneuve.lockito</string>
    <string name="prefs_about_sendFeedback_data">mailto:lockito@dvilleneuve.fr?subject=Feedback Lockito</string>
    <string name="prefs_general_locationsDelay_key">pref_locationsDelay</string>
    <string name="prefs_general_unitSystem_defaultValue">METRIC</string>
    <string name="prefs_general_unitSystem_key">pref_unitSystem</string>
    <string name="prefs_itineraries_order_defaultValue">LAST_CREATED_FIRST</string>
    <string name="prefs_itineraries_order_key">pref_itinerariesOrder</string>
    <string name="prefs_itineraries_showThumbnails_key">pref_showThumbnails</string>
    <string name="prefs_itinerary_forceSimulationRunning_key">pref_forceSimulationRunning</string>
    <string name="prefs_itinerary_notifyUnsaved_key">pref_notifyUnsaved</string>
    <string name="prefs_itinerary_stopWhenFinish_key">pref_stopWhenFinished</string>
    <string name="prefs_itinerary_vibrateOnMarkerUpdate_key">pref_vibrateOnMarkerUpdate</string>
</resources>