<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/layout_details_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:lockito="http://schemas.android.com/apk/res-auto">
    <fr.dvilleneuve.lockito.ui.component.FixedEditTextDecimal android:id="@id/speedText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/config_margin" lockito:prefixText="@string/activity_itinerary_speed" />
    <fr.dvilleneuve.lockito.ui.component.FixedEditTextDecimal android:id="@id/altitudeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/config_margin" android:layout_toRightOf="@id/speedText" lockito:prefixText="@string/activity_itinerary_altitude" />
    <fr.dvilleneuve.lockito.ui.component.FixedEditTextDecimal android:id="@id/accuracyBaseText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/config_margin" android:layout_below="@id/speedText" lockito:prefixText="@string/activity_itinerary_accuracy" />
    <fr.dvilleneuve.lockito.ui.component.FixedEditTextDecimal android:id="@id/accuracyDeltaText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/config_margin" android:layout_toRightOf="@id/accuracyBaseText" android:layout_below="@id/speedText" lockito:prefixText="@string/activity_itinerary_accuracyDeltaPrefix" />
    <com.joanzapata.iconify.widget.IconTextView android:id="@id/summaryText" android:paddingLeft="14.0dip" android:paddingBottom="@dimen/config_marginBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/config_margin" android:layout_marginRight="@dimen/config_margin" android:text="@string/activity_itinerary_summary_unavailable" android:layout_below="@id/accuracyBaseText" />
</RelativeLayout>